index.html.erb: link to SQL too

--- a/app/views/data/index.html.erb
+++ b/app/views/data/index.html.erb
@@ -55,7 +55,8 @@ store => {
   </thead>
   <tbody class="results-body"></tbody>
 </table>
-<a href="#" class="csv-download">Download results (CSV)</a>
+<a href="#" class="csv-download">Download results (CSV)</a><br/>
+... or try the <a href="sql">SQL explorer</a>
 
 <div class="templates">
   <li id="data-list-row" class="data-list-item template">
