--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,6 +75,7 @@
                 <% end %>
                 <% if current_user.try(:has_role?, :core) %>
                   <%= nav_link DataController, label: 'Data Explorer' %>
+		  <%= nav_link 'SQL Data Explorer', '/data/sql' %>
                 <% end %>
                 <%= nav_link SpamDomainsController, label: 'Spam Domains' %>
                 <%= nav_link DomainTagsController, label: 'Domain Tags' %>
